// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lines should render for index 0 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Lines
    activeIndex={0}
    colourScheme={
      Object {
        "active": "#FFFFFF",
        "inactive": "#DDDDDD",
        "pressed": "#EEEEEE",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Rect
          fill="#DDDDDD"
          height="3"
          rx={0}
          ry={0}
          width={40}
          x="120"
          y="79"
        />,
        <Rect
          fill="#DDDDDD"
          height="3"
          rx={0}
          ry={0}
          width={40}
          x="269"
          y="79"
        />,
        <Rect
          fill="#DDDDDD"
          height="3"
          rx={0}
          ry={0}
          width={40}
          x="416"
          y="79"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#DDDDDD",
          "height": "3",
          "rx": 0,
          "ry": 0,
          "width": 40,
          "x": "120",
          "y": "79",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#DDDDDD",
          "height": "3",
          "rx": 0,
          "ry": 0,
          "width": 40,
          "x": "269",
          "y": "79",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#DDDDDD",
          "height": "3",
          "rx": 0,
          "ry": 0,
          "width": 40,
          "x": "416",
          "y": "79",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Rect
            fill="#DDDDDD"
            height="3"
            rx={0}
            ry={0}
            width={40}
            x="120"
            y="79"
          />,
          <Rect
            fill="#DDDDDD"
            height="3"
            rx={0}
            ry={0}
            width={40}
            x="269"
            y="79"
          />,
          <Rect
            fill="#DDDDDD"
            height="3"
            rx={0}
            ry={0}
            width={40}
            x="416"
            y="79"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#DDDDDD",
            "height": "3",
            "rx": 0,
            "ry": 0,
            "width": 40,
            "x": "120",
            "y": "79",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#DDDDDD",
            "height": "3",
            "rx": 0,
            "ry": 0,
            "width": 40,
            "x": "269",
            "y": "79",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#DDDDDD",
            "height": "3",
            "rx": 0,
            "ry": 0,
            "width": 40,
            "x": "416",
            "y": "79",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Lines should render for index 1 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Lines
    activeIndex={1}
    colourScheme={
      Object {
        "active": "#FFFFFF",
        "inactive": "#DDDDDD",
        "pressed": "#EEEEEE",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Rect
          fill="#DDDDDD"
          height="3"
          rx={0}
          ry={0}
          width={40}
          x="104.6"
          y="79"
        />,
        <Rect
          fill="#DDDDDD"
          height="3"
          rx={0}
          ry={0}
          width={40}
          x="274"
          y="79"
        />,
        <Rect
          fill="#DDDDDD"
          height="3"
          rx={0}
          ry={0}
          width={40}
          x="416"
          y="79"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#DDDDDD",
          "height": "3",
          "rx": 0,
          "ry": 0,
          "width": 40,
          "x": "104.6",
          "y": "79",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#DDDDDD",
          "height": "3",
          "rx": 0,
          "ry": 0,
          "width": 40,
          "x": "274",
          "y": "79",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#DDDDDD",
          "height": "3",
          "rx": 0,
          "ry": 0,
          "width": 40,
          "x": "416",
          "y": "79",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Rect
            fill="#DDDDDD"
            height="3"
            rx={0}
            ry={0}
            width={40}
            x="104.6"
            y="79"
          />,
          <Rect
            fill="#DDDDDD"
            height="3"
            rx={0}
            ry={0}
            width={40}
            x="274"
            y="79"
          />,
          <Rect
            fill="#DDDDDD"
            height="3"
            rx={0}
            ry={0}
            width={40}
            x="416"
            y="79"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#DDDDDD",
            "height": "3",
            "rx": 0,
            "ry": 0,
            "width": 40,
            "x": "104.6",
            "y": "79",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#DDDDDD",
            "height": "3",
            "rx": 0,
            "ry": 0,
            "width": 40,
            "x": "274",
            "y": "79",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#DDDDDD",
            "height": "3",
            "rx": 0,
            "ry": 0,
            "width": 40,
            "x": "416",
            "y": "79",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Lines should render for index 2 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Lines
    activeIndex={2}
    colourScheme={
      Object {
        "active": "#FFFFFF",
        "inactive": "#DDDDDD",
        "pressed": "#EEEEEE",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Rect
          fill="#DDDDDD"
          height="3"
          rx={0}
          ry={0}
          width={40}
          x="116.2"
          y="79"
        />,
        <Rect
          fill="#DDDDDD"
          height="3"
          rx={0}
          ry={0}
          width={40}
          x="259"
          y="79"
        />,
        <Rect
          fill="#DDDDDD"
          height="3"
          rx={0}
          ry={0}
          width={40}
          x="426.2"
          y="79"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#DDDDDD",
          "height": "3",
          "rx": 0,
          "ry": 0,
          "width": 40,
          "x": "116.2",
          "y": "79",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#DDDDDD",
          "height": "3",
          "rx": 0,
          "ry": 0,
          "width": 40,
          "x": "259",
          "y": "79",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#DDDDDD",
          "height": "3",
          "rx": 0,
          "ry": 0,
          "width": 40,
          "x": "426.2",
          "y": "79",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Rect
            fill="#DDDDDD"
            height="3"
            rx={0}
            ry={0}
            width={40}
            x="116.2"
            y="79"
          />,
          <Rect
            fill="#DDDDDD"
            height="3"
            rx={0}
            ry={0}
            width={40}
            x="259"
            y="79"
          />,
          <Rect
            fill="#DDDDDD"
            height="3"
            rx={0}
            ry={0}
            width={40}
            x="426.2"
            y="79"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#DDDDDD",
            "height": "3",
            "rx": 0,
            "ry": 0,
            "width": 40,
            "x": "116.2",
            "y": "79",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#DDDDDD",
            "height": "3",
            "rx": 0,
            "ry": 0,
            "width": 40,
            "x": "259",
            "y": "79",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#DDDDDD",
            "height": "3",
            "rx": 0,
            "ry": 0,
            "width": 40,
            "x": "426.2",
            "y": "79",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
